hard-gists/1107375/run.log
=== Docker Run Log for 1107375 ===
Started at: Mi 29. Okt 11:51:33 CET 2025

[2025-10-29 11:51:34] START: Running container for 1107375
[2025-10-29 11:51:34] SUCCESS: Container 33cdadd907c9ddac94ab69266ce48955991c847a572f4aa53e7d862a3e8349d6 started for 1107375
=== Container logs for 1107375 ===
  File "/snippet.py", line 19
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1107375 ===
[2025-10-29 11:51:36] INFO: Container 33cdadd907c9ddac94ab69266ce48955991c847a572f4aa53e7d862a3e8349d6 has stopped
